feat(app): added gh-pages deployment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
-  "name": "amatyas",
+  "name": "amatyas001.github.io",
+  "author": "Mátyás Angyal <amatyas001@gmail.com>",
+  "homepage": "http://amatyas001.github.io/build",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +13,8 @@
     "react-scripts": "3.4.0"
   },
   "scripts": {
+    "predeploy": "react-scripts build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -30,5 +34,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
