--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "predeploy": "react-scripts build",
     "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && cp ./public/index.html ./build/ && cp ./public/404.html ./build/",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
